--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
     "build": "next build",
     "start": "next start"
   },
-  
   "dependencies": {
+    "mongodb": "^4.11.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2",
-
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
-    "prettier": "^2.0.5"
+    "postcss": "^8.4.14",
+    "prettier": "^2.0.5",
+    "tailwindcss": "^3.1.2",
+    "typescript": "4.7.2"
   }
 }
