--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "mongodb": "^4.11.0",
     "next": "latest",
+    "next-auth": "^4.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
