--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "mongodb": "^4.11.0",
     "next": "latest",
     "next-auth": "^4.15.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swr": "^1.3.0",
+    "unfetch": "^4.2.0"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
